# arcade

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  colorize_sprites.sh  project.godot  pyproject.toml  requirements.txt
.github/workflows/: activation.yml  ci.yml  pages.yml  release.yml  unity-activation.yml  unity-build.yml
ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt
chronicle-rpg/: LICENSE  README.md
config/: stages_expansion.json
docs/: ACE_CHARACTER_MOMENTS.md  BOOT_SCENE_SPEC.md  CINEMATIC_DESIGN.md  CONCEPT.md  CONTROLLER_DESIGN.md  DESIGN_PHILOSOPHY.md  DEVIL_BLADE_INTEGRATION.md  ONI_ARENA_SPEC.md  PLAYER_PREFAB_SPEC.md  PORTING_PRIORITY.md  PROJECT_PLAN.md  PYTHON_FEATURES_TO_PORT.md  SHIRIME_ARENA_SPEC.md  TANUKI_ARENA_SPEC.md
dust-rts/: DUST_RTS_BUILD_PROMPT.md  DUST_RTS_DESIGN_DOC.md  README.md
eve-rebellion/: CLAUDE.md  Cargo.toml  README.md  build-wasm.sh
prompts/: 01_core_engine.md  02_juice_and_feedback.md  03_discovery_mode.md
rts-prototype/: README.md
scenes/: Main.tscn
sprocket-science/: .gitignore  project.godot
src/: lib.rs  main.rs
systems/: dialogue_engine.py  quest_manager.py
tests/: test_map_data.py  test_quest_manager.py  test_state_manager.py
web/: index.html
yokai-blade/: .editorconfig  README.md  chernoklinok_boss_design.docx  yokai_blade_boss_design.docx
yokai_blade_claude_docs/: 04_BOSS_INTRO_SCRIPTS.md  06_ARCHITECTURE_AND_CODE_SCAFFOLD.md
yokai_blade_ops_docs/: ATTACK_TEST_HARNESS_SPEC.md  MARKETING_CAPTURE_PLAN.md  ONBOARDING_COVENANT_COPY.md
(+375 files in other folders)
