[project]
name = "eve-chronicle-rpg"
version = "0.1.0"
description = "A Python RPG framework set in the EVE Online universe"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pygame>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
